modules/1.networks/main.tf
# Create VPC
resource "google_compute_network" "vpc" {
    name                    = "${var.name}-vpc"
    auto_create_subnetworks = "false"
}

# Create Subnet
resource "google_compute_subnetwork" "subnet" {
    name          = "${var.name}-subnet"
    ip_cidr_range = "${var.subnet_cidr}"
    network       = "${var.name}-vpc"
    depends_on    = ["google_compute_network.vpc"]
    region        = "${var.subnet_region}"
}

# VPC firewall configuration
resource "google_compute_firewall" "firewall" {
    name    = "${var.name}-firewall"
    network = "${google_compute_network.vpc.name}"
    depends_on    = ["google_compute_network.vpc"]
    
    allow {
        protocol = "icmp"
    }

    allow {
        protocol = "tcp"
        ports    = ["22"]
    }

    allow {
        protocol = "tcp"
        ports    = ["80"]
    }
    source_ranges = ["0.0.0.0/0"]
}
